--- a/pages/template/modal.wxml
+++ b/pages/template/modal.wxml
@@ -8,7 +8,7 @@
     </view>
     <view class="cu-bar bg-white justify-end">
       <view class="action">
-        <button class="cu-btn line-green text-green" bindtap="authModal">取消</button>
+        <button class="cu-btn line-green text-green" bindtap="home">取消</button>
         <button class="cu-btn bg-green margin-left" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">授权认证</button>
       </view>
     </view>
