--- a/pages/enterprise/index.wxml
+++ b/pages/enterprise/index.wxml
@@ -30,6 +30,7 @@
     </view>
   </navigator>
 </view>
-<tabBar id="tabBar" auth="{{auth}}"></tabBar>
+
+<tabBar id="tabBar" auth="{{auth}}" type="expert"></tabBar>
 
 
