--- a/style/colorUI/main.wxss
+++ b/style/colorUI/main.wxss
@@ -73,7 +73,7 @@ page {
 	font-family: Helvetica Neue, Helvetica, sans-serif;
 }
 
-view,
+view,                                                                            
 scroll-view,
 swiper,
 button,
@@ -91,6 +91,14 @@ image {
 
 .radius {
 	border-radius: 6rpx;
+}
+
+.radius-lg {
+	border-radius: 10rpx;
+}
+
+.radius-xl {
+	border-radius: 16rpx;
 }
 
 /* ==================
