--- a/pages/expert/detail.wxml
+++ b/pages/expert/detail.wxml
@@ -34,4 +34,10 @@
       <view wx:if="{{info.resource}}"><text class="iconfont icon-resource text-blue margin-right-xs"></text>资源及合作需求:{{info.resource}}</view>      
     </view>
   </view>
+  <view class="padding flex flex-direction bg-white">
+    <navigator hover-class="none" url="/pages/appointment/form?id={{info.uid}}" class="cu-btn bg-blue lg"  wx:if="{{info.uid}}">咨询</navigator>
+    <navigator hover-class="none" url="/pages/expert/form?id={{info.id}}" class="cu-btn bg-cyan lg" wx:if="{{mold==2}}">编辑</navigator>
+  </view>
+
+
 </view>
