--- a/pages/appointment/list.wxml
+++ b/pages/appointment/list.wxml
@@ -3,9 +3,11 @@
   <view class="cu-list menu" wx:for="{{appointments}}" wx:for-index="i">
     <view class="cu-list  menu-avatar" bindtap="open" data-index="{{i}}">
       <view class="cu-item">
-        <view class="cu-avatar round lg" style="background-image:url({{item.mine.avatarUrl}});"></view>
+        <view class="cu-avatar round lg" style="background-image:url({{item.mine.avatarUrl}});" wx:if="{{item.mold==1}}"></view>
+        <view class="cu-avatar round lg" style="background-image:url({{item.toUser.avatarUrl}});" wx:else></view>
         <view class="content">
-          <view class="text-grey">{{item.mine.name || item.mine.nickName}}的咨询</view>
+          <view class="text-grey" wx:if="{{item.mold==1}}">{{item.mine.name || item.mine.nickName}}的咨询</view>
+          <view class="text-grey" wx:else>咨询{{item.toUser.name || item.toUser.nickName}}专家</view>
         </view>
         <view class="action">
           <text class="cu-tag bg-{{bgs[item.status.type]}} margin-right-sm radius-lg">{{item.status.title}}</text>
@@ -59,7 +61,7 @@
         <view class="title text-grey margin-left-xs"><text class="cuIcon-message margin-right-sm"></text>咨询内容</view>
         <view class="textarea">{{item.content}}</view>
       </view>
-      <view class="flex align-center bg-white padding-top" wx:if="{{item.status.type==0}}">
+      <view class="flex align-center bg-white padding-top" wx:if="{{item.status.type==0 && item.mold==1}}">
         <button class="cu-btn bg-grey lg flex-sub margin" bindtap="showModal" data-index="{{i}}" data-status="2" data-id="{{item.id}}">拒绝</button>
         <button class="cu-btn bg-green lg flex-sub margin" bindtap="showModal" data-index="{{i}}" data-status="1" data-id="{{item.id}}">同意</button>
       </view>
