--- a/pages/index/home.wxml
+++ b/pages/index/home.wxml
@@ -23,8 +23,17 @@
   <view class="padding-xl">
     <view class="padding flex">
       <navigator open-type="reLaunch" url="/pages/index/reg?type=0" class="cu-btn bg-blue lg flex-sub margin radius-lg">机构客户</navigator>
-      <navigator open-type="reLaunch" url="/pages/index/reg?type=1" class="cu-btn bg-blue lg radius-lg flex-sub margin">行业专家</navigator> 
+      <navigator open-type="reLaunch" url="/pages/index/reg?type=1" class="cu-btn bg-blue lg radius-lg flex-sub margin">行业专家</navigator>
     </view>
-    <navigator open-type="reLaunch" url="/pages/expert/index" class="text-center margin-tb-sm lg">路过,先逛逛~</navigator>
+
+
+
+
+
   </view>
 </view>
+<view class="foot safe-bottom">
+  <view class="text-center margin-tb-lg lg padding-bottom" bindtap="loginModal">已有账号,点击登录</view>
+  <navigator open-type="reLaunch" url="/pages/expert/index" class="text-center margin-tb-lg lg">路过,先逛逛~</navigator>
+</view>
+<loginModal loginModal="{{loginModal}}"></loginModal>
