--- a/components/tab-bar/index.wxml
+++ b/components/tab-bar/index.wxml
@@ -1,20 +1,15 @@
-<view class="cu-bar tabbar bg-white shadow foot" wx:if="{{mold!=1}}">  
-  <view class="action" bindtap="switch" data-url="/pages/expert/index">
+<view class="cu-bar tabbar bg-white shadow foot">  
+  <view class="action" bindtap="switch" data-url="/pages/demo/home">
     <view class='cuIcon-cu-image'>
-      <image  src="/images/expert{{selected==0?1:0}}.png"></image>
+      <image  src="http://gridpic.tsing-tec.com/consult%2Fhome.png"></image>
     </view>
-    <view class="{{selected==0?'text-yellow':'text-gray'}}">专家</view>
+    <view>首页</view>
   </view>
-  <view class="action" bindtap="switch" data-url="/pages/enterprise/index"  wx:if="{{mold==2}}">
+
+  <view class="action" bindtap="switch"  data-url="/pages/demo/my">
     <view class='cuIcon-cu-image'>
-      <image  src="/images/enterprise{{selected==1?1:0}}.png"></image>
+      <image  src="http://gridpic.tsing-tec.com/consult%2Fmy.png"></image>
     </view>
-    <view class="{{selected==1?'text-yellow':'text-gray'}}">企业</view>
-  </view>
-  <view class="action" bindtap="switch"  data-url="/pages/index/my">
-    <view class='cuIcon-cu-image'>
-      <image  src="/images/user{{selected==2?1:0}}.png"></image>
-    </view>
-    <view class="{{selected==2?'text-yellow':'text-gray'}}">个人</view>
+    <view>我的</view>
   </view>
 </view>
