--- a/app.wxss
+++ b/app.wxss
@@ -2,8 +2,20 @@
 @import "/style/colorUI/icon.wxss";
 @import "/style/colorUI/main.wxss";
 
-
+page{
+  --main:#6887B3;
+}
+.main{
+  color:var(--main);
+}
+.bg-main{
+  color:#fff;
+  background-color: var(--main);
+}
 .safe-bottom{
   padding-bottom: constant(safe-area-inset-bottom);
   padding-bottom: env(safe-area-inset-bottom);
+}
+.footer-bottom{
+  padding-bottom: calc(150rpx + env(safe-area-inset-bottom) / 2);  
 } 
